Added info to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>InHabit Test Page</title>
+    <title>InHabit Test Page (TestModule)</title>
     <link rel="icon" href="/favicon.ico" type="image/x-icon" >
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
@@ -28,7 +28,7 @@
     </style>
 </head>
 <body>
-  <h1 class="header-1">InHabit Test Page</h1>
+  <h1 class="header-1">InHabit Test Page (TestModule)</h1>
 
   <div class="widget-container">
     <h2 class="header-2">In slots (#getTitle, #getThumbanil)</h2>
