Changed config attributes

--- a/public/index.html
+++ b/public/index.html
@@ -32,12 +32,12 @@
 
   <div class="widget-container">
     <h2 class="header-2">In slots (#getTitle, #getThumbanil)</h2>
-    <script async="" data-ark-development="/slots.json" src="http://inhabit-widget-app-dev.azurewebsites.net/js/ark-main.js"></script>
+    <script async="" data-ark-configuration="/slots.json" src="http://inhabit-widget-app-dev.azurewebsites.net/js/ark-main.js"></script>
   </div>
 
   <div class="widget-container">
     <h2 class="header-2">In presenter (#display)</h2>
-    <script async="" data-ark-development="/presenter.json" src="http://inhabit-widget-app-dev.azurewebsites.net/js/ark-main.js"></script>
+    <script async="" data-ark-configuration="/presenter.json" src="http://inhabit-widget-app-dev.azurewebsites.net/js/ark-main.js"></script>
   </div>
 </body>
 </html>
